--- a/Module3/index.html
+++ b/Module3/index.html
@@ -17,7 +17,7 @@
   <!-- NAVBAR -->
   <section class="darksection">
 
-    <nav class="firstsection navbar navbar-expand-sm navbar-dark">
+    <nav class="firstsection navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#navbar-brand">Food, LLC</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
