--- a/Module3/index.html
+++ b/Module3/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ml-auto text-center">
             <li class="nav-item ">
-              <a class="nav-link d-block d-sm-none" >Chicken <span class="sr-only"></span></a>
+              <a class="nav-link d-block d-md-none" >Chicken <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-block d-sm-none" >Beef </a>
+              <a class="nav-link d-block d-md-none" >Beef </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-block d-sm-none" >Sushi </a>
+              <a class="nav-link d-block d-md-none" >Sushi </a>
             </li>
           </ul>
         </div>
